# omnivoice_inference_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  audio.py  bootstrap.py  cli.py  config.py  download_model.py  main.py  model_assets.py  request_parsing.py  schemas.py  service.py  triton_client.py
examples/: curl.sh
scripts/: check_triton.sh  download_model.sh  run_dev.sh
tests/: test_audio.py  test_config.py  test_model_assets.py  test_request_parsing.py  test_service.py  test_triton_client.py
triton_model_repo/omnivoice/: config.pbtxt
triton_model_repo/omnivoice/1/: model.py
