[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivoice-inference-service"
version = "0.1.0"
description = "Triton-first OmniVoice inference service for local TTS deployments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "sentencepiece>=0.2.0",
  "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
download = [
  "huggingface_hub>=0.30.0",
]

[project.scripts]
omnivoice-service = "app.main:run"
omnivoice-synth = "app.cli:main"
omnivoice-triton-client = "app.triton_client:main"
omnivoice-download-model = "app.download_model:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
